prover-ray/zkcdriver/testdata/synced/invalid/shift_03.zkc
//error:3:14-16:braces required
fn f(x:u8, y:u8, z:u8) -> (r:u8) {
  r = x << y >> z
  return
}
